--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,13 @@
    <head>
          <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-      <script src="client.js"></script>
-   </head>
-   <body>
+      </head>
+      <body>
+         <button id="Winter">Winter</button>
+         <button id="Spring">Spring</button>
+         <button id="Summer">Summer</button>
+         <button id="Autumn">Autumn</button>
+         
+         <script src="client.js"></script>
    </body>
 </html>
