--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,11 @@
          <button id="Spring">Spring</button>
          <button id="Summer">Summer</button>
          <button id="Autumn">Autumn</button>
+
+         <button id="Pause">Pause</button>
+         <button id="Start">Start</button>
+
+         <button id="Boom">BOOM</button>
          
          <script src="client.js"></script>
    </body>
