--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,13 @@
          <button id="Pause">Pause</button>
          <button id="Start">Start</button>
 
-         <button id="Boom">BOOM</button>
-         
+      <p id="grass">Grass - 0 </p>
+      <p id="grassEater">GrassEater - 0</p>
+      <p id="predator">Predator - 0</p>
+      <p id="takard">Takard - 0</p>
+      <p id="kaycak">Kaycak - 0</p>
+
+        
          <script src="client.js"></script>
    </body>
 </html>
